--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,15 @@
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
     <!-- Stylesheets-->
+    <link href="../libs/vendors/prism/prism.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet">
-    <!--link(href="css/print.css", media="print", rel="stylesheet")-->
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Javascript-->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
     <script src="../libs/javascript/collapse.js"></script>
+    <script src="../libs/vendors/prism/prism.js"></script>
   </head>
   <body>
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -52,49 +53,57 @@
         </div>
         <div class="articleContent">
           <p class="p-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
-          <h2>Contents</h2>
-          <div class="flex-container">
-            <div class="flex-col-1-3">
-              <h3>Styles</h3>
+          <div class="row">
+            <div class="span12">
+              <h2 id="principles">Design principles</h2>
+              <ul>
+                <li><a href="#">Design principles</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span3">
+              <h2 id="atoms">Atoms</h2>
               <ul>
                 <li><a href="typography.html">Typography</a></li>
                 <li><a href="colours.html">Colours</a></li>
+                <li><a href="tables.html">Tables</a></li>
               </ul>
             </div>
-            <div class="flex-col-1-3">
-              <h3>Layout</h3>
+            <div class="span3">
+              <h2 id="molecules">Molecules</h2>
               <ul>
                 <li> 
                   <h4>Grid</h4>
-                </li>
-                <li style="list-style: none; display: inline">
                   <ul>
                     <li><a href="layout.html">Grid layout</a></li>
                     <li><a href="new-grid.html">New grid layout</a></li>
                   </ul>
                 </li>
-                <li><a href="long-form.html">Long form content</a></li>
-                <li><a href="toolbar.html">Content toolbar</a></li>
-                <li><a href="advisor.html">Advisor content</a></li>
+                <li><a href="forms.html">Forms</a></li>
+                <li><a href="callout.html">Callout</a></li>
+                <li><a href="collapse.html">Collapse</a></li>
               </ul>
             </div>
-            <div class="flex-col-1-3">
-              <h3>Elements</h3>
+            <div class="span3">
+              <h2 id="organisms">Organisms</h2>
               <ul>
-                <li><a href="tables.html">Tables</a></li>
                 <li> 
                   <h4>Modals</h4>
-                </li>
-                <li style="list-style: none; display: inline">
                   <ul>
                     <li><a href="extent.html">Extent Switcher</a></li>
                     <li><a href="overlay.html">Modal/Overlay</a></li>
                     <li><a href="reference.html">Reference tool</a></li>
                   </ul>
                 </li>
-                <li><a href="callout.html">Callout</a></li>
-                <li><a href="collapse.html">Collapse</a></li>
-                <li><a href="forms.html">Forms</a></li>
+                <li><a href="toolbar.html">Content toolbar</a></li>
+              </ul>
+            </div>
+            <div class="span3">
+              <h2 id="templates">Templates</h2>
+              <ul>
+                <li><a href="long-form.html">Long form content</a></li>
+                <li><a href="advisor.html">Advisor content</a></li>
               </ul>
             </div>
           </div>
