--- a/public/principles.html
+++ b/public/principles.html
@@ -15,14 +15,15 @@
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
     <!-- Stylesheets-->
-    <link href="css/site.css" media="screen" rel="stylesheet">
-    <link href="css/print.css" media="print" rel="stylesheet">
+    <link href="../libs/vendors/prism/prism.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Javascript-->
     <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
     <script src="../libs/javascript/beta-dap-accordion.js"></script>
     <script src="../libs/javascript/collapse.js"></script>
+    <script src="../libs/vendors/prism/prism.js"></script>
   </head>
   <body>
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -52,6 +53,7 @@
         </div>
         <div class="articleContent row">
           <div class="span8">
+            <p class="u-lede">These design principles are rooted in our <a href="#">advice proposition</a> by referring back to them and developing from them, along with our <a href="#">content style guide</a> we will create a consistent and valuable digital advice service. </p>
             <div id="overview" class="steps">
               <h3>On this page
                 <ol>
@@ -59,20 +61,26 @@
                   <li><a href="#principle2">Design for inclusion</a></li>
                   <li><a href="#principle3">Design for common case (happy path)</a></li>
                   <li><a href="#principle4">Help people solve a problem (do the hard work)</a></li>
-                  <li><a target="_blank" href="#principle5">Be honest</a></li>
+                  <li><a href="#principle5">Be honest</a></li>
                   <li><a href="#principle6">Design should be minimal/unobtrusive</a><br>let people access the information as easily as possible</li>
                   <li><a href="#principle7">Iterate based on data and feedback (not assumptions)</a></li>
                 </ol>
               </h3>
             </div>
             <h2 id="principle1">Design for users needs</h2>
-            <p>Designing for user needs is the first and most important design principle. People use our service to solve real life problems, start by capturing problems</p>
-            <p id="principle2">Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices</p>
-            <p id="principle3">It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems, if we can solve the most common cases online or through digital assistance then we can free adviser time to tackle the most complex issues</p>
-            <p id="principle4">We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary direct.</p>
-            <p id="principle5">Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, as for feedback, encourage engagement.</p>
-            <p id="principle6">Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.</p>
-            <p id="principle7">Design is continuous. Be agile, review, iterate, improve </p>
+            <p>Designing for user needs is the first and most important design principle. People use our service to solve real life problems, start by capturing problems.</p>
+            <h2 id="principle2">Design for inclusion</h2>
+            <p>Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices.</p>
+            <h2 id="principle3">Design for common case (happy path)</h2>
+            <p>It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems, if we can solve the most common cases online or through digital assistance then we can free. adviser time to tackle the most complex issues.</p>
+            <h2 id="principle4">Help people solve a problem (do the hard work)</h2>
+            <p>We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary direct.</p>
+            <h2 id="principle5">Be honest</h2>
+            <p>Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, as for feedback, encourage engagement.</p>
+            <h2 id="principle6">Design should be minimal/unobtrusive</h2>
+            <p>Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.</p>
+            <h2 id="principle7">Iterate based on data and feedback (not assumptions)</h2>
+            <p>Design is continuous. Be agile, review, iterate, improve.</p>
           </div>
         </div>
         <section class="print-only">
