--- a/public/callout.html
+++ b/public/callout.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Callouts</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#molecules" title="Molecules">Molecules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Callouts</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -51,88 +51,135 @@
         <div class="title">
           <h1 class="title__heading js-ref"><span class="title__title">Callouts</span></h1>
         </div>
-        <div class="articleContent">
-          <p class="p-lede">Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.</p>
-          <div class="col-sm-8">
+        <div class="articleContent row">
+          <div class="span8">
+            <p class="p-lede">Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.</p>
             <p>It is important to ask:</p>
             <ul>
               <li>is the callout neccessary, too many, misused or unneccessary callouts weaken their value</li>
               <li>which style of callout is relevant, is the information 'useful', 'important' or 'recommending'</li>
             </ul>
             <p>Colours can't be relied upon as the only method of communicating the importance and content of a callout. Any callouts should be clearly titled using <code>h2</code> or <code>h3</code> tags. Use the appropriate Aria tags for the relevant callouts to ensure screenreaders understand the information contained.</p>
-          </div>
-          <div class="col-sm-8">
             <h2>Callout styles</h2>
-            <div class="callout">
-              <h3>Callout unstyled</h3>
-              <p> <code>div.callout</code></p>
-              <p>This callout does not require an Aria tag but should be labeled with a clear heading.</p>
-              <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p><a class="callout__link"><code>a.callout__link</code></a>
+            <div class="example-box-plain">
+              <div class="callout">
+                <h3>Callout unstyled</h3>
+                <p>This callout does not require an Aria tag but should be labeled with a clear heading.</p>
+                <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p><a class="callout__link">Callout link</a>
+              </div>
             </div>
-            <div class="callout--confirmation callout--icon">
-              <h3>Callout confirmation</h3>
-              <p> <code>div.callout--confirmation.callout--icon</code></p>
-              <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
-              <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link"><code>a.callout__link</code></a>
+            <pre><code class="language-html">&lt;div class="callout"&gt;
+	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
+	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
+	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--confirmation callout--icon">
+                <h3>Callout confirmation</h3>
+                <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
+                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link">Callout link</a>
+              </div>
             </div>
-            <div class="callout--warning">
-              <h3>Callout warning</h3>
-              <p> <code>div.callout--warning</code></p>
-              <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
-              <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p><a class="callout__link"><code>a.callout__link</code></a>
+            <pre><code class="language-html">&lt;div class="callout--confirmation callout--icon"&gt;
+	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
+	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
+	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
+	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--warning">
+                <h3>Callout warning</h3>
+                <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
+                <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p><a class="callout__link">Callout link</a>
+              </div>
             </div>
-            <div class="callout--alert callout--icon">
-              <h3>Callout alert</h3>
-              <p> <code>div.callout--alert.callout--icon</code></p>
-              <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
-              <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
-              <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link"><code>a.callout__link</code></a>
+            <pre><code class="language-html">&lt;div class="callout--warning"&gt;
+	&lt;h3&gt;Callout warning&lt;/h3&gt;
+	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Important"&lt;/code&gt;.&lt;/p&gt;
+	&lt;p&gt;The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.&lt;/p&gt;
+	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--alert callout--icon">
+                <h3>Callout alert</h3>
+                <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
+                <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
+                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link">Callout link</a>
+              </div>
             </div>
-            <div class="callout--quote">
-              <h3>Callout quote</h3>
-              <p> <code>div.callout--quote</code></p>
-              <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p><a class="callout__link"><code>a.callout__link</code></a>
+            <pre><code class="language-html">&lt;div class="callout--alert callout--icon"&gt;
+	&lt;h3&gt;Callout alert&lt;/h3&gt;
+	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Help"&lt;/code&gt;.&lt;/p&gt;
+	&lt;p&gt;This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.&lt;/p&gt;
+	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
+	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--quote">
+                <h3>Callout quote</h3>
+                <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p><a class="callout__link">Callout link</a>
+              </div>
             </div>
+            <pre><code class="language-html">&lt;div class="callout--quote"&gt;
+	&lt;h3&gt;Callout quote&lt;/h3&gt;
+	&lt;p&gt;Also referred to as Blockquote, this style is when a quote needs to be displayed.&lt;/p&gt;
+	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
             <h2>Callouts combined</h2>
             <p>These callouts can be combined both consecutively or combined, someexamples are shown below.</p>
-            <div class="callout--info">
-              <h3>Callout info</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            <div class="example-box-plain">
+              <div class="callout">
+                <h3>Callout</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                <div class="callout--quote">
+                  <h3>This is a quote</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                </div>
+                <div class="callout--alert">
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                </div>
+              </div>
+            </div>
+            <pre><code class="language-html"></code></pre>
+            <div class="example-box-plain">
               <div class="callout--quote">
                 <h3>This is a quote</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-              </div>
-              <div class="callout--alert">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-              </div>
-            </div>
-            <div class="callout--quote">
-              <h3>This is a quote</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-              <div class="callout--warning">
-                <h3>Callout warning</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                <div class="callout--warning">
+                  <h3>Callout warning</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                </div>
               </div>
             </div>
+            <pre><code class="language-html"></code></pre>
             <h2>Brand callout styles</h2>
             <p>Below are examples of callout styles utilising the brand colour palette.</p>
             <p>These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.</p>
-            <div class="callout--heritage">
-              <h3>Callout heritage</h3>
-              <p><code>div.callout--heritage</code></p>
+            <div class="example-box-plain">
+              <div class="callout--heritage">
+                <h3>Callout heritage</h3>
+              </div>
             </div>
-            <div class="callout--responsible">
-              <h3>Callout responsible</h3>
-              <p><code>div.callout--responsible</code></p>
+            <pre><code class="language-html"></code></pre>
+            <div class="example-box-plain">
+              <div class="callout--responsible">
+                <h3>Callout responsible</h3>
+              </div>
             </div>
-            <div class="callout--inventive">
-              <h3>Callout inventive</h3>
-              <p><code>div.callout--inventive</code></p>
+            <pre><code class="language-html"></code></pre>
+            <div class="example-box-plain">
+              <div class="callout--inventive">
+                <h3>Callout inventive</h3>
+              </div>
             </div>
-            <div class="callout--generous">
-              <h3>Callout generous</h3>
-              <p><code>div.callout--generous</code></p>
+            <pre><code class="language-html"></code></pre>
+            <div class="example-box-plain">
+              <div class="callout--generous">
+                <h3>Callout generous</h3>
+              </div>
             </div>
+            <pre><code class="language-html"></code></pre>
           </div>
         </div>
         <section class="print-only">
