--- a/public/callout.html
+++ b/public/callout.html
@@ -141,7 +141,17 @@
                 </div>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout"&gt;
+	&lt;h3&gt;Callout&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+	&lt;div class="callout--quote"&gt;
+		&lt;h3&gt;This is a quote&lt;/h3&gt;
+		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+	&lt;/div&gt;
+	&lt;div class="callout--alert"&gt;
+		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--quote">
                 <h3>This is a quote</h3>
@@ -152,7 +162,14 @@
                 </div>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout--quote"&gt;
+	&lt;h3&gt;This is a quote&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+	&lt;div class="callout--warning"&gt;
+		&lt;h3&gt;Callout warning&lt;/h3&gt;
+		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
             <h2>Brand callout styles</h2>
             <p>Below are examples of callout styles utilising the brand colour palette.</p>
             <p>These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.</p>
@@ -161,25 +178,33 @@
                 <h3>Callout heritage</h3>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout--heritage"&gt;
+	&lt;h3&gt;Callout heritage&lt;/h3&gt;
+&lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--responsible">
                 <h3>Callout responsible</h3>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout--responsible"&gt;
+	&lt;h3&gt;Callout responsible&lt;/h3&gt;
+&lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--inventive">
                 <h3>Callout inventive</h3>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout--inventive"&gt;
+	&lt;h3&gt;Callout inventive&lt;/h3&gt;
+&lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--generous">
                 <h3>Callout generous</h3>
               </div>
             </div>
-            <pre><code class="language-html"></code></pre>
+            <pre><code class="language-html">&lt;div class="callout--generous"&gt;
+	&lt;h3&gt;Callout generous&lt;/h3&gt;
+&lt;/div&gt;</code></pre>
           </div>
         </div>
         <section class="print-only">
